<resources>
    <string name="app_name">Apostamos</string>
    <string name="btn_apostar">Apostar</string>
    <string name="btn_cargar_Saldo">Cargar</string>
    <string name="et_apuesta">Monto</string>
    <string name="tv_apuesta">Ingrese su apuesta:</string>
    <string name="sus_datos">Sus Datos</string>
    <string name="celular">Celular:</string>
    <string name="ci">CI:</string>
    <string name="email">Email:</string>
    <string name="nombre">Nombre:</string>
    <string name="saldo">Saldo:</string>
    <string name="juegos_disponibles">Juegos Disponibles</string>


    <string-array name="fechas">
        <item>17 de Julio</item>
        <item>19 de Julio</item>
    </string-array>
    <string name="title_activity_menu_navigation_drawer">MenuNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="administrador">administrador</string>
    <string name="monto">Monto:</string>
    <string name="usuarios">Usuarios</string>

</resources>
