<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorVerde"
    tools:context=".UsuarioAdministrador">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/colorGhostWhite"
        android:textColor="@color/colorGhostWhite"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        android:hint="@string/saldo"
        android:textColor="@color/colorGhostWhite"
        android:textColorHint="@color/colorGhostWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        android:hint="ID:"
        android:textColorHint="@color/colorGhostWhite"
        android:textColor="@color/colorGhostWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:layout_marginTop="28dp"
        android:text="Usuarios"
        android:textColor="@color/colorGhostWhite"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:hint="@string/nombre"
        android:textColorHint="@color/colorGhostWhite"
        android:textColor="@color/colorGhostWhite"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button10"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/colorRojoEliminar"
        android:enabled="false"
        android:text="Eliminar"
        android:textColor="@color/colorGhostWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <Button
        android:id="@+id/button11"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/ic_search"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>